# -jtech-ecosystem-

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
agents/: README.md
agents/default/: ceo.md  cmo.md  designer.md  developer.md  sales-agent.md
data/: actions.json  products.json
hooks/: README.md  session-end.sh  session-start.sh
install/: setup_path.ps1
jtech/: __init__.py  __main__.py  builder.py  cli.py  improve.py  llm.py  marketplace.py  project_manager.py  studio.py  system_access.py
jtech/company/: __init__.py  memory.py
jtech/company/departments/: __init__.py  ceo.py  cmo.py  cto.py  designer.py  developer.py  sales_agent.py
jtech/infrastructure/: __init__.py  error_handler.py  event_bus.py  health_monitor.py  permissions.py  state_manager.py
jtech/web/: __init__.py  server.py
jtech/web/static/: index.html
rules/: README.md  common.md  git.md  python.md  react.md  typescript.md
skills/: README.md  build-product.md  code-review.md  security-scan.md  think.md
